trunk/Archive2/13/b56f2800f7f098/output
main.cpp:12:12: error: cast from pointer to smaller type 'int' loses information
    assert((int)p0 % 32 == 0);
           ^~~~~~~
/usr/include/assert.h:92:5: note: expanded from macro 'assert'
  ((expr)                                                               \
    ^
main.cpp:13:12: error: cast from pointer to smaller type 'int' loses information
    assert((int)p1 % 32 == 0);
           ^~~~~~~
/usr/include/assert.h:92:5: note: expanded from macro 'assert'
  ((expr)                                                               \
    ^
main.cpp:14:12: error: cast from pointer to smaller type 'int' loses information
    assert((int)p2 % 32 == 0);
           ^~~~~~~
/usr/include/assert.h:92:5: note: expanded from macro 'assert'
  ((expr)                                                               \
    ^
main.cpp:15:12: error: cast from pointer to smaller type 'int' loses information
    assert((int)p3 % 32 == 0);
           ^~~~~~~
/usr/include/assert.h:92:5: note: expanded from macro 'assert'
  ((expr)                                                               \
    ^
4 errors generated.
